--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Laila ,Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,42 +8,97 @@
 
 
 :root {
-    --nav-background-color : linear-gradient(to right,  rgb(168 44 249), rgb(80 37 221) , rgb(80 37 21));
+    --nav-background-color : linear-gradient(to right, #9750EE ,#560C9F, #4a359c);
     --nav-height: 64px;
+    --footer-background-color : rgba(43, 48, 53,1) ;
+    --dark-theme-text: white;
+    --footer-height: 300px;
+}
+body, main {
+    background-color: #091836;
+    color: wheat;
 }
 
 nav {
-    background-image: var(--nav-background-color);
+    /* background-image: var(--nav-background-color); */
+    background-color: #2580ed;
     height: var(--nav-height);
     display: flex;
     justify-content: space-between;
+    color: white;
 }
 
 .nav-left,
-.nav-search,
+.nav-modules,
 .nav-right {
-    width: 33vw;
     height: var(--nav-height);
-    /* background-color: red; */
-    border: 2px solid slateblue;
+    display: flex;
+    gap: 0 25px;
+    padding: 20px 20px  0 20px;
+
 }
+
+.nav-right {
+    padding: 10px;
+    
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80vw;
+    margin: 10px 10vw;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px 10px;
+}
+
+.container-items {
+    width: 24vw;
+    height: 100px;
+    border: 2px solid;
+    border: 4px solid;
+    text-align: center;
+border-image: linear-gradient(to right, rgb(189, 236, 245), rgb(61, 203, 231)) 1;
+
+}
+
+
+
 
 
 
 footer {
+    /* padding-left: 10px; */
     display: flex;
+    color: var(--dark-theme-text);
+    height: var(--footer-height);
     justify-content: space-evenly;
     /* flex-wrap: wrap; */
     width: 100vw;
+    background-color: var(--footer-background-color);
+    position: sticky;
 }
 
-.container-head {
-    /* flex-grow: 2; */
-    width: calc(190em/7);
+.footer-container-head {
+    margin: 50px;
+    flex-grow: 2;
+    width: calc(180em/5);
+    /* height: var(--footer-height);     */
 }
 
-.container {
-    width: calc(95em/7);
+.footer-container {
+    /* height: var(--footer-height); */
+    margin: 50px;
+    width: calc(90em/5);
     /* width: 50%; */
-    /* flex-grow: 1; */
+    flex-grow: 1;
+}
+
+footer h3 {
+    height: 40px;    
+}
+
+.mobile {
+    display: none;
 }
